--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutter_portfolio">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="web/icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="web/favicon.png"/>
 
   <title>flutter_portfolio</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="web/manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
